Fix send email to admin when customer booking

--- a/notification-service/src/modules/mailer/templates/admin-success-booking.hbs
+++ b/notification-service/src/modules/mailer/templates/admin-success-booking.hbs
@@ -4,7 +4,7 @@
     </head>
     <body>
         <div>
-            <p>We have received a request from the {{fullName}} to booking an appointment. Please contact to the customer to confirm it via {{phoneNumber}} or their email {{userEmail}}.</p>
+            <p>We have received a request from the {{fullName}} to booking an appointment. Please contact to the customer to confirm it via {{phoneNumber}} or their email {{customerEmail}}.</p>
         </div>
     </body>
 </html>
